--- a/Flask/app/templates/hello.html
+++ b/Flask/app/templates/hello.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macros %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title%}
     {{super()}}
@@ -8,8 +9,11 @@
 
 
 {% block content%}
+    {% if username%}
+        <h1>Bienvenido {{username | capitalize }}</h1>
+    {% endif%}
     {% if user_ip %}
-        <h1>Hello, tu IP es {{user_ip}} </h1>
+        <h3>Hello, tu IP es {{user_ip}} </h3>
     {% else %}
         <a href="{{url_for('index')}}">Ir a inicio</a>
     {% endif%}
